deployment/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy-main
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: blue86321/swimlane-demo-gateway-otel:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: gateway-port
        livenessProbe:
          httpGet:
            path: /health
            port: gateway-port
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: gateway-port
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 5
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: gateway-port
