deployment/goods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goods-deploy-main
spec:
  selector:
    matchLabels:
      app: goods
      swimlane: main
  template:
    metadata:
      labels:
        app: goods
        swimlane: main
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
      - name: goods
        image: blue86321/swimlane-demo-goods-otel:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
          name: goods-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goods-deploy-dev-feature1
spec:
  selector:
    matchLabels:
      app: goods
      swimlane: dev-feature1
  template:
    metadata:
      labels:
        app: goods
        swimlane: dev-feature1
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
      - name: goods
        image: blue86321/swimlane-demo-goods-otel:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
          name: goods-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goods-deploy-dev-feature2
spec:
  selector:
    matchLabels:
      app: goods
      swimlane: dev-feature2
  template:
    metadata:
      labels:
        app: goods
        swimlane: dev-feature2
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
      - name: goods
        image: blue86321/swimlane-demo-goods-otel:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
          name: goods-port

---
apiVersion: v1
kind: Service
metadata:
  name: goods-service
spec:
  selector:
    app: goods
  ports:
    - protocol: TCP
      port: 50051
      targetPort: goods-port
