deployment/pricing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-deploy-main
spec:
  selector:
    matchLabels:
      app: pricing
      swimlane: main
  template:
    metadata:
      labels:
        app: pricing
        swimlane: main
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: pricing
        image: blue86321/swimlane-demo-pricing-otel:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50052
          name: pricing-port
        livenessProbe:
          # grpc probe does not support `named port`
          # resource: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#use-a-named-port
          grpc:
            port: 50052
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-deploy-dev-feature1
spec:
  selector:
    matchLabels:
      app: pricing
      swimlane: dev-feature1
  template:
    metadata:
      labels:
        app: pricing
        swimlane: dev-feature1
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: pricing
        image: blue86321/swimlane-demo-pricing-otel:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50052
          name: pricing-port
        livenessProbe:
          grpc:
            port: 50052
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
spec:
  selector:
    app: pricing
  ports:
    - protocol: TCP
      port: 50052
      targetPort: pricing-port
