deployment/pricing-istio-routing.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pricing
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: pricing-service
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: baggage
        value: .*swimlane=dev-feature1.*
    backendRefs:
    - name: pricing-service-dev-feature1
      port: 50052
  - backendRefs:
    - name: pricing-service-main
      port: 50052

---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service-main
spec:
  selector:
    app: pricing
    swimlane: main
  ports:
    - protocol: TCP
      port: 50052
      targetPort: pricing-port

---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service-dev-feature1
spec:
  selector:
    app: pricing
    swimlane: dev-feature1
  ports:
    - protocol: TCP
      port: 50052
      targetPort: pricing-port
